[package]
name = "finance_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui_plot = "0.29"        # For the graphs
serde = { version = "1", features = ["derive"] } # For saving structure
serde_json = "1"          # For saving to JSON file
chrono = { version = "0.4", features = ["serde"] } # For Dates